<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        android:background="@color/dark_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="start" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15sp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:onClick="saveRecipe"
            android:layout_marginEnd="5dp"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <androidx.constraintlayout.utils.widget.MockView
                android:id="@+id/mockView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/titleETV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:text="Title"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/mockView"/>

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/add_recipe_name"
                android:hint="@string/add_recipe_name"
                android:padding="5dp"
                app:layout_constraintBaseline_toBaselineOf="@id/titleETV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleETV"
                app:layout_constraintTop_toBottomOf="@+id/mockView" />

            <TextView
                android:id="@+id/ingredientsETV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/titleETV" />

            <EditText
                android:id="@+id/ingredientsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/add_ingredients"
                android:autofillHints="@string/add_ingredients"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsETV"/>

            <TextView
                android:id="@+id/instructionsETV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsEditText"/>

            <EditText
                android:id="@+id/instructionsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/add_instructions"
                android:autofillHints="@string/add_instructions"
                app:layout_constraintTop_toBottomOf="@+id/instructionsETV"/>

            <Button
                android:id="@+id/deleteRecipeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:onClick="deleteRecipe"
                android:text="@string/delete"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/instructionsEditText"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="54dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="274dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="526dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ingredientsETV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
